@@ -1,3 +1,13 @@
+2003-04-29  Vince Darley  <vincentdarley@users.sourceforge.net>
+
+	* generic/tclFileName.c: fix to bug reported privately by
+	Jeff where, for example, 'glob -path {[tcl]} *' gets confused
+	by the leading special character (which is escaped internally),
+	and instead lists files in '/'.  Bug only occurs on Windows 
+	where '\' is also a directory separator.  (Bug has been around
+	at least since Tcl 8.3).
+	* tests/fileName.test: added test for the above bug.
+	
 2003-04-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclBasic.c:  Tcl_EvalObjv() failed to honor the
